private-dormitory/force-app/main/default/objects/Room__c/Room__c.object-meta.xml
<CustomObject>
    <description>Represents a room that can be assigned to residents and linked to contracts.</description>
    <label>Room</label>
    <nameField>
        <label>Room Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rooms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>