private-dormitory/force-app/main/default/objects/Room__c/fields/Current_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupancy__c</fullName>
    <description>Roll-up summary field that counts all active bookings for this room.</description>
    <label>Current Occupancy</label>
    <summaryForeignKey>Booking__c.Room__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>