private-dormitory/force-app/main/default/objects/Room__c/fields/Needs_Maintenance__c.field-meta.xml
<CustomField>
    <fullName>Needs_Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Maintenance</label>
    <type>Checkbox</type>
</CustomField>