private-dormitory/force-app/main/default/objects/Room__c/fields/Number__c.field-meta.xml
<CustomField>
    <fullName>Number__c</fullName>
    <description>The number used to identify the room.</description>
    <label>Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>