private-dormitory/force-app/main/default/objects/Room__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(Current_Occupancy__c = 0, &quot;Available&quot;, IF(Current_Occupancy__c &lt; Capacity__c, &quot;Partially Occupied&quot;, &quot;Full&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>